syntax = "proto3";

package com.lyh.protocol;
option java_package="com.lyh.protocol.cmd";

	//public static int GATE_SERVER = 1;
	//public static int GAME_SERVER = 2;
	//public static int WORLD_SERVER = 3;
	//public static int LOGIN_SERVER = 4;
	//public static int PUBLIC_SERVER = 5;
	//public static int LOG_SERVER = 6;
	//public static int CLIENT = 7;
	//public static int DB_SERVER = 8;
	//public static int CENTER_SERVER = 9;
	
	//public static int PLATFROM_SERVER = B;
	//public static int QUARTZ_JOB_SERVER = C;
	


enum CmdType
{

  COMMAND_NONE=0;
//游戏之间内部通信 0x0100000-0xFF00000

//下面是外网的消息
//协议头不要后16位再取4位二进制=DB_SERVER
//客户端和游戏服务器通信全部是5位最高位
	//状态码
	ERROR_CODE=0xffff;//服务器返回的状态码 
	HEART_REQUEST=0x1ffff;//客户端心跳消息(每1-2分钟发一次)
	HEART_RESPONSE=0x1fffe;//客户端心跳消息(每1-2分钟发一次)
    TIPS_RESPONSE=0xfffe;//tips提示

   	C_L_COMMON_LOGIN_REQUEST=0x00001;//普通登录
	L_C_COMMON_LOGIN_RESPONSE=0x00002;//普通返回

	C_L_GET_LOGIC_IP_REQUEST=0x00003;//获取IP
	L_C_GET_LOGIC_IP_RESPONSE=0x00004;//获取IP返回
	
	C_L_MOBILE_LOGIN_REQUEST=0x00005;//手机登录请求
	L_C_MOBILE_LOGIN_RESPONSE=0x00006;//返回手机登录
	
	C_L_GET_LOGIN_ADVERTISEMENT_LOADING_IMG_REQUEST=0x00007;//获取广告图加载页面的请求
	L_C_GET_LOGIN_ADVERTISEMENT_LOADING_IMG_RESPONSE=0x00008;//获取广告图加载页面图的返回
	
	
	//逻辑服APi
	C_S_VERTIFY_USER_REQUEST=0x10001;//用户逻辑服验证请求
	S_C_VERTIFY_USER_RESPONSE=0x10002;//用户逻辑服验证返回
	
	C_S_GET_ADVERTISEMENT_LOADING_IMG_REQUEST=0x10003;//获取广告图加载页面的请求
	S_C_GET_ADVERTISEMENT_LOADING_IMG_RESPONSE=0x10004;//获取广告图加载页面图的返回
	
	C_S_GET_TRUMPET_REQUEST=0x10005;//请求喇叭消息
	S_C_GET_TRUMPET_RESPONSE=0x10006;//轮播喇叭的返回
	
	C_S_GET_RECOMMEND_PAGE_DATA_REQUEST=0x10007;//请求推荐页数据
	S_C_GET_RECOMMEND_PAGE_DATA_RESPONSE=0x10008;//请求推荐页数据的返回
	
	C_S_GET_NEWEST_PAGE_DATA_REQUEST=0x10009;//请求最新/排行的视频数
	S_C_GET_NEWEST_PAGE_DATA_RESPONSE=0x10010;//请求最新/排行的视频数的返回
	
	C_S_GET_RECOMMEND_IN_A_BATCH_REQUEST=0x10011;//请求推荐的换一批
	S_C_GET_RECOMMEND_IN_A_BATCH_RESPONSE=0x10012;//请求推荐的换一批的返回
	
	C_S_GET_SPECIAL_PAGE_DATA_REQUEST=0x10013;//请求专题
	S_C_GET_SPECIAL_PAGE_DATA_RESPONSE=0x10014;//请求专题的返回
	
	C_S_GET_THREE_BIG_VIDEO_PAGE_DATA_REQUEST=0x10015;//请求三大数据
	S_C_GET_THREE_BIG_VIDEO_PAGE_DATA_RESPONSE=0x10016;//请求推荐页数据的返回
	
	C_S_GET_SPECIAL_MORE_VIDEO_REQUEST=0x10017;//点击专题进入专题的更多
	S_C_GET_SPECIAL_MORE_VIDEO_RESPONSE=0x10018;//点击专题进入专题的更多的返回
	
	C_S_GET_THREE_BIG_MORE_VIDEO_REQUEST=0x10019;//点击三大分类的更多
	S_C_GET_THREE_BIG_MORE_VIDEO_RESPONSE=0x10020;//点击三大分类的更多的返回
	
	C_S_GET_PLAY_VIDEO_REQUEST=0x10021;//点击播放视频
	S_C_GET_PLAY_VIDEO_RESPONSE=0x10022;//点击播放视频的返回
	
	C_S_CLICK_SEARCH_REQUEST=0x10023;//点击搜索框
	S_C_CLICK_SEARCH_RESPONSE=0x10024;//点击搜索框的返回
	
	C_S_CLICK_REMOVE_RECORD_REQUEST=0x10025;//清除搜索记录
	S_C_CLICK_REMOVE_RECORD_RESPONSE=0x10026;//清除搜索记录的返回
	
	C_S_SURE_SEARCH_KEYWORD_REQUEST=0x10027;//确认搜索
	S_C_SURE_SEARCH_KEYWORD_RESPONSE=0x10028;//确认搜索的返回
	
	C_S_CHECK_HISTORY_RECORD_REQUEST=0x10029;//历史记录查询
	S_C_CHECK_HISTORY_RECORD_RESPONSE=0x10030;//历史记录查询的返回
	
	C_S_DELETE_HISTORY_RECORD_REQUEST=0x10031;//删除历史记录
	S_C_DELETE_HISTORY_RECORD_RESPONSE=0x10032;//删除历史记录的返回
	
	C_S_CHECK_COLLECT_RECORD_REQUEST=0x10033;//收藏查询
	S_C_CHECK_COLLECT_RECORD_RESPONSE=0x10034;//收藏查询的返回
	
	C_S_DELETE_COLLECT_RECORD_REQUEST=0x10035;//删除收藏记录
	S_C_DELETE_COLLECT_RECORD_RESPONSE=0x10036;//删除收藏记录的返回
	
	C_S_GET_API_USER_INFO_REQUEST=0x10037;//请求我的信息
	S_C_GET_API_USER_INFO_RESPONSE=0x10038;//请求我的信息的返回
	
	C_S_CLICK_MY_MESSAGE_REQUEST=0x10039;//请求我的消息
	S_C_CLICK_MY_MESSAGE_RESPONSE=0x10040;//请求我的消息的返回
	
	C_S_INVITECODE_BIND_REQUEST=0x10041;//请求绑定邀请码
	S_C_INVITECODE_BIND_RESPONSE=0x10042;//请求绑定邀请码的返回
	
	C_S_MOBILE_BIND_REQUEST=0x10043;//请求绑定手机
	S_C_MOBILE_BIND_RESPONSE=0x10044;//请求绑定手机的返回
	
	C_S_GET_QR_CODE_REQUEST=0x10045;//请求二维码
	S_C_GET_QR_CODE_RESPONSE=0x10046;//请求二维码的返回
	
	C_S_GET_TASK_REQUEST=0x10047;//请求任务
	S_C_GET_TASK_RESPONSE=0x10048;//请求任务的返回
	
	C_S_GET_TASK_AWARD_REQUEST=0x10049;//请求领取任务奖励
	S_C_GET_TASK_AWARD_RESPONSE=0x10050;//请求领取任务奖励的返回
	
	C_S_SAVE_QR_CODE_REQUEST=0x10051;//请求保存二维码
	S_C_SAVE_QR_CODE_RESPONSE=0x10052;//请求保存二维码的返回
	
	C_S_GET_PAY_DATA_REQUEST=0x10053;//请求充值数据
	S_C_GET_PAY_DATA_RESPONSE=0x10054;//请求充值数据的返回
	
	C_S_RECHARGE_RECORD_REQUEST=0x10055;//请求充值记录
	S_C_RECHARGE_RECORD_RESPONSE=0x10056;//请求充值记录的返回
	
	C_S_EXCHAGE_KAMI_REQUEST=0x10057;//请求兑换卡密
	S_C_EXCHAGE_KAMI_RESPONSE=0x10058;//请求兑换卡密的返回
	
	C_S_CLICK_COLLECT_REQUEST=0x10059;//请求 收藏
	S_C_CLICK_COLLECT_RESPONSE=0x10060;//请求 收藏的返回
	
	C_S_CLICK_NOTICE_REQUEST=0x10061;//请求 公告
	S_C_CLICK_NOTICE_RESPONSE=0x10062;//请求 公告的返回
    
	C_S_AUTO_PLAY_REQUEST=0x10063;//请求 自动播放
	S_C_AUTO_PLAY_RESPONSE=0x10064;//请求 自动播放
	
	C_S_MODIFY_AUTO_PLAY_REQUEST=0x10065;//修改 自动播放
	S_C_MODIFY_AUTO_PLAY_RESPONSE=0x10066;//修改 自动播放
	
    C_S_GET_APP_VERSION_REQUEST=0x10067;//请求版本号
	S_C_GET_APP_VERSION_RESPONSE=0x10068;//请求版本号 返回
	
	C_S_CLICK_AD_REQUEST=0x10069;//点击广告
	S_C_CLICK_AD_RESPONSE=0x10070;//点击广告 返回
	
	C_S_WATCH_VIDEO_REQUEST=0x10071;//观看视频的时间
	S_C_WATCH_VIDEO_RESPONSE=0x10072;//观看视频的时间 返回
	
	C_S_GET_RECOMMEND_THE_HOST_REQUEST=0x10073;//请求主播
	S_C_GET_RECOMMEND_THE_HOST_RESPONSE=0x10074;//请求主播 返回
	
	C_S_GET_LIVE_PLATFORM_REQUEST=0x10075;//请求直播
	S_C_GET_LIVE_PLATFORM_RESPONSE=0x10076;//请求直播 返回
	
	C_S_WATCH_LIVE_REQUEST=0x10077;//观看直播的时间
	S_C_WATCH_LIVE_RESPONSE=0x10078;//观看直播的时间 返回
	
	C_S_GET_LIVE_FREE_TIME_REQUEST=0x10079;//请求直播免费时间
	S_C_GET_LIVE_FREE_TIME_RESPONSE=0x10080;//请求直播免费时间 返回
	
	S_C_BREAK_LINE_RESPONSE=0x10081;//接受到该协议为断线
	
	C_S_LIKE_TO_TRAMPLE_REQUEST=0x10082;//用户 请求踩或者点赞
	S_C_LIKE_TO_TRAMPLE_RESPONSE=0x10083;//请求直播免费时间 返回
	
	C_S_GET_MY_TOP_ACOUNT_REQUEST=0x10084;//请求找回账号
	S_C_GET_MY_TOP_ACOUNT_RESPONSE=0x10085;//请求找回账号 返回
	
	C_S_MODIFY_PASSWORD_REQUEST=0x10086;//请求修改密码
	S_C_MODIFY_PASSWORD_RESPONSE=0x10087;//请求修改密码 返回
	
	C_S_GET_FILTER_DATA_REQUEST=0x10088;//请求筛选的数据
	S_C_GET_FILTER_DATA_RESPONSE=0x10089;//请求筛选的数据 返回
	
	C_S_GET_FILTER_VIDEO_DATA_REQUEST=0x10090;//请求筛选的视频数据
	S_C_GET_FILTER_VIDEO_DATA_RESPONSE=0x10091;//请求筛选的视频数据 返回


    C_S_GET_QR_CODE_RETRIEVE_PASSWORD_REQUEST=0x10092;//请求二维码找回密码
    S_C_GET_QR_CODE_RETRIEVE_PASSWORD_RESPONSE=0x10093;//请求二维码找回密码 返回



 }
